[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.977894, 1 )
script = ExtResource( 1 )

[node name="Enunciado1" type="Label" parent="."]
margin_left = 29.0
margin_top = 18.0
margin_right = 331.0
margin_bottom = 51.0
rect_scale = Vector2( 1.32288, 1.32288 )
text = "Abaixo, insira os valores para serem atribuídos à lista mencionada no segundo botão"
align = 1
autowrap = true

[node name="Enunciado2" type="Label" parent="."]
margin_left = 28.633
margin_top = 128.0
margin_right = 330.633
margin_bottom = 161.0
rect_scale = Vector2( 1.32288, 1.32288 )
text = "Abaixo, insira o valor para ser usado na função mencionada no quarto botão"
align = 1
autowrap = true

[node name="Button1" type="Button" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 51.1303
margin_top = 247.0
margin_right = 303.13
margin_bottom = 283.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Exibir valores da lista já feita"

[node name="Button2" type="Button" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 51.1303
margin_top = 337.0
margin_right = 303.13
margin_bottom = 373.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Exibir valores da lista criada por você"

[node name="Button3" type="Button" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 51.1303
margin_top = 430.0
margin_right = 303.13
margin_bottom = 466.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Exibir texto já feito através de função"

[node name="Button4" type="Button" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 51.1303
margin_top = 520.0
margin_right = 303.13
margin_bottom = 556.0
rect_scale = Vector2( 1.4, 1.4 )
text = "Exibir valor digitado através de função"

[node name="Input1" type="LineEdit" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 51.1303
margin_top = 62.0
margin_right = 151.13
margin_bottom = 112.0
placeholder_text = "Valor 1"
caret_blink = true

[node name="Input2" type="LineEdit" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 177.933
margin_top = 62.0
margin_right = 277.933
margin_bottom = 112.0
placeholder_text = "Valor 2"
caret_blink = true

[node name="Input3" type="LineEdit" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 302.691
margin_top = 62.0
margin_right = 402.691
margin_bottom = 112.0
placeholder_text = "Valor 3"
caret_blink = true

[node name="Input4" type="LineEdit" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
margin_left = 177.933
margin_top = 176.0
margin_right = 277.933
margin_bottom = 226.0
placeholder_text = "Valor 4"
caret_blink = true

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.215686, 0.156863, 0.321569, 1 )
margin_left = 480.0
margin_top = 170.0
margin_right = 980.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="."]
margin_left = 490.851
margin_top = 176.0
margin_right = 651.851
margin_bottom = 306.0
rect_scale = Vector2( 3.00344, 2.97599 )
autowrap = true

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="text_entered" from="Input4" to="." method="_on_Input4_text_entered"]
